massive changes for changing review layout to look like a comic book

--- a/views/create.html
+++ b/views/create.html
@@ -192,7 +192,7 @@
               <div class="col-md-10 col-md-offset-1">
                 <script id="selectableGif-template2" type="text/x-handlebars-template">
                   <article class="col-xs-6 col-md-4">
-                    <img class="gifBox" src="{{insertGifHere}}"></a>
+                    <img class="gifBox img-responsive" src="{{insertGifHere}}"></a>
                   </article>
                 </script>
               </div>
@@ -214,7 +214,7 @@
                 <div class="col-xs-12">
                   <script id="gif-choice" type="text/x-handlebars-template">
                     <article class="center col-xs-4">
-                      <img class="selected-gif" src="{{userChosenGif}}"></a>
+                      <img class="selected-gif img-responsive" src="{{userChosenGif}}"></a>
                       <input type="hidden" name="gif" value="{{userChosenGif}}">
                   </script>
                 </div>
