--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -73,15 +73,25 @@
   }
 
   .reviewIndividual {
-    border: solid 2px black;
-    background-color: rgba(250, 240, 250, 0.3);
-    margin-bottom: 15px;
-    border-radius: 0px 70px 0px 0px;
+    border: solid 1px black;
+    background-color: rgba(250, 240, 250, 0.4);
+    padding: 5px;
+    padding-right: -300px;
+    margin: 3px;
   }
 
   .review-gif {
-    /*min-height: 200px;*/
     margin-top: 10%;
+    float: none;
+    margin: 0 auto;
+    border-radius: 5px;
+    max-height: 190px;
+  }
+
+  .review-half {
+    /*max-width: 300px;*/
+    max-height: 200px;
+    min-height: 190px;
   }
 
   .pic img {
@@ -124,9 +134,9 @@
     margin-top: 15px
   }
 
-  body {
+  /*body {
     background: linear-gradient(225deg, #74C5FF, white);
-  }
+  }*/
 
   h1 {
     font-size: 70px;
@@ -176,4 +186,18 @@
 
 .hidden {
   visibility: hidden!important;
+}
+
+.bigguns {
+  height: 425px;
+}
+
+.reviewIndividual {
+  margin: 1px 22px;
+  border: solid black 2px;
+}
+
+body {
+  background-color: black;
+  color: white;
 }
