--- a/views/index.html
+++ b/views/index.html
@@ -81,10 +81,6 @@
 
     <div class="title-section">
       <div class="container">
-
-
-<!--********************-->
-
            <!-- Buttons that trigger the signup and login modals, logout -->
         <div class="row">
           <div class="col-xs-1">
@@ -99,7 +95,6 @@
             </form>
           </div>
         </div>
-      <!-- </div> -->
         <div class="site-title">
           <h1 class="font-effect-3d">Where's My Hero!?</h1>
         </div>
@@ -220,7 +215,7 @@
                   </section>
                 </article>
               </script>
-
+            </div>
           </div>
         </div>
       </div>
