--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -73,8 +73,8 @@
   }
 
   .reviewIndividual {
-    border: solid 1px black;
-    background-color: rgba(250, 240, 250, 0.4);
+    /*border: solid 1px black;*/
+    background-color: rgba(250, 240, 250, 0.5);
     padding: 5px;
     padding-right: -300px;
     margin: 3px;
