--- a/views/index.html
+++ b/views/index.html
@@ -109,11 +109,11 @@
       <div class="batcave">
         <div class="container">
         <div class="row">
-          <div class="site-title col-xs-6 comic">
+          <div class="site-title col-md-6 comic">
             <h1 class="font-effect-3d title-text">Where's</h1>
           </div>
           <div class="picDiv">
-            <section class="col-xs-6 comic">
+            <section class="col-md-6 comic">
               <div class="row">
                 <div class="col-xs-8">
                   <div class="col-xs-12 hero-chat">
@@ -128,31 +128,31 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-4 thwack-image comic">
+          <div class="col-md-4 thwack-image comic">
 
           </div>
-          <div class="site-title col-xs-4 comic">
+          <div class="site-title col-md-4 comic">
             <h1 class="font-effect-3d title-text">My</h1>
           </div>
-          <div class="col-xs-4 pow-image comic">
+          <div class="col-md-4 pow-image comic">
 
           </div>
         </div>
         <div class="row">
           <div class="picDiv">
-            <section class="col-xs-6 comic">
+            <section class="col-md-6 comic">
               <div class="row">
                 <div class="col-xs-2 batman-box">
                   <img class="sandwichBatman" src="https://aunicornwithcancer.files.wordpress.com/2013/01/hero_sandwich_by_stanlydan-d39c77b.jpg" height="175" style="max-width: 320px">
                 </div>
-                <div class="col-xs-8 col-md-offset-2">
+                <div class="col-xs-8 col-xs-offset-2">
                   <div class="col-xs-12 batwich-chat">
                     <!-- batwich chat goes here -->
                   </div>
                 </div>
               </div>
             </section>
-            <div class="site-title col-xs-6 comic">
+            <div class="site-title col-md-6 comic">
               <h1 class="font-effect-3d title-text">Hero?!</h1>
             </div>
           </div>
